# 3DPrinter-Wifi-Controller

./: .gitignore  3DP_Wifi_Controller.ioc  CMakeLists.txt  CMakePresets.json  STM32F103XX_FLASH.ld  TODO
Core/FatFs/: ff_print_err.c  ff_print_err.h  ffconf.h
Core/Inc/: FreeRTOSConfig.h  cmdHandler.h  cmdList.h  esp32.h  fileTask.h  gpio.h  ledTask.h  printerController.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  usart.h  usb.h
Core/STemWin/: UITask.c  UITask.h
Core/STemWin/Config/: GUIConf.c  GUIConf.h  GUI_X_Touch_Analog.c  LCDConf_FlexColor.c
Core/STemWin/inc/: GUI.h
Core/STemWin_Task/: FramewinDLG.h  MainTask.c  MainTask.h  Page1DLG.c  Page2DLG.c  Page3DLG.c  Page4DLG.c  Touch_Calibration.h  Touch_calibration.c
Core/Src/: cmdHandler.c  dma.c  esp32.c  fileTask.c  freertos.c  gpio.c  main.c  printerController.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  syscalls.c  system_stm32f1xx.c  usart.c  usb.c
Core/lcd/: bsp_ili9341_lcd.c  bsp_ili9341_lcd.h  bsp_xpt2046_lcd.c  bsp_xpt2046_lcd.h
Core/led/: bsp_led.c  bsp_led.h
Core/sdio/: Fatfs_SDIO.c  Fatfs_SDIO.h  bsp_sdio_sdcard.c  bsp_sdio_sdcard.h  sdio_test.c
Core/sha256/: sha256.c  sha256.h
Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_ll_sdmmc.h
cmake/stm32cubemx/: CMakeLists.txt
